--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
     </div>
 
     <script>
-        let socket = new WebSocket("ws://192.168.29.169:81/");
+        let socket = new WebSocket("wss://192.168.29.169:81/");
         let lastTime = 0;
         let totalDistance = 0;
         const wheelCircumference = 0.88; // 0.88 meters per rotation
